@@ -2,6 +2,7 @@
 - Fix for small landscape and small square widget text
 - Fix for old v6 of next aired
 - Fix for alphabet strip wrap-around
+- Add new TMDb Helper function for select list of queried items
 
 0.9.49
 - Fix OSD covering subtitles when adjusting offset
